src/objects/saDocuments__c.object
<CustomObject>
    <fields>
        <fullName>Category_CCP__c</fullName>
        <description>CCP+でどのカテゴリに表示するかの判別項目</description>
        <label>Category(CCP+)</label>
        <picklist>
            <picklistValues>
                <fullName>Category_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category_4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_large__c</fullName>
        <label>Category(large)</label>
        <picklist>
            <picklistValues>
                <fullName>LargeCat1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LargeCat2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LargeCat3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LargeCat4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_small__c</fullName>
        <label>Category(small)</label>
        <picklist>
            <controllingField>Category_large__c</controllingField>
            <picklistValues>
                <fullName>SmallCat1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat1_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmallCat3_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>小カテゴリー4_1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>SortNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>書類</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SortNo__c</columns>
        <columns>Category_CCP__c</columns>
        <columns>Category__c</columns>
        <columns>Category_large__c</columns>
        <columns>Category_small__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>DOC-{00000000}</displayFormat>
        <label>saDocuments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>CCP</fullName>
        <active>true</active>
        <label>CCP+</label>
    </recordTypes>
    <recordTypes>
        <fullName>SANX</fullName>
        <active>true</active>
        <label>SANX</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>